Bring back title bars on popup windows in MacViews.

The fix is to use BrowserNativeWidgetWindow only for tabbed windows.

Bug: 769327
Change-Id: Ice36d327c2c27411ed2a4d15a8c6a78a9e55e347
Reviewed-on: https://chromium-review.googlesource.com/1038545
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Commit-Queue: Sidney San Martín <sdy@chromium.org>
Cr-Commit-Position: refs/heads/master@{#555372}
Former-commit-id: d5a640ce8c4fcbe9053db4b617538e5cdcf36471