chrome/browser/ui/views/frame/browser_frame_mac.mm
@@ -90,22 +90,29 @@ NativeWidgetMacNSWindow* BrowserFrameMac::CreateNSWindow(
     const views::Widget::InitParams& params) {
   NSUInteger style_mask = NSTitledWindowMask | NSClosableWindowMask |
                           NSMiniaturizableWindowMask | NSResizableWindowMask;
-  if (@available(macOS 10.10, *)) {
-    style_mask |= NSFullSizeContentViewWindowMask;
+
+  base::scoped_nsobject<NativeWidgetMacNSWindow> ns_window;
+  if (browser_view_->IsBrowserTypeNormal()) {
+    if (@available(macOS 10.10, *))
+      style_mask |= NSFullSizeContentViewWindowMask;
+    ns_window.reset([[BrowserNativeWidgetWindow alloc]
+        initWithContentRect:ui::kWindowSizeDeterminedLater
+                  styleMask:style_mask
+                    backing:NSBackingStoreBuffered
+                      defer:NO]);
+    // Ensure tabstrip/profile button are visible.
+    if (@available(macOS 10.10, *))
+      [ns_window setTitlebarAppearsTransparent:YES];
+  } else {
+    ns_window.reset([[NativeWidgetMacNSWindow alloc]
+        initWithContentRect:ui::kWindowSizeDeterminedLater
+                  styleMask:style_mask
+                    backing:NSBackingStoreBuffered
+                      defer:NO]);
   }
-  base::scoped_nsobject<BrowserNativeWidgetWindow> ns_window(
-      [[BrowserNativeWidgetWindow alloc]
-          initWithContentRect:ui::kWindowSizeDeterminedLater
-                    styleMask:style_mask
-                      backing:NSBackingStoreBuffered
-                        defer:NO]);
   [ns_window setCommandDispatcherDelegate:command_dispatcher_delegate_];
   [ns_window setCommandHandler:[[[BrowserWindowCommandHandler alloc] init]
                                    autorelease]];
-  // Ensure tabstrip/profile button are visible.
-  if (@available(macOS 10.10, *)) {
-    [ns_window setTitlebarAppearsTransparent:YES];
-  }
   return ns_window.autorelease();
 }
 
